--- a/roles/ambari_state/vars/main.yml
+++ b/roles/ambari_state/vars/main.yml
@@ -8,30 +8,26 @@ ambari_password: admin
 master_hosts: [host1]
 slave_hosts: [host2, host3, host4]
 
+hadoop_master: [NAMENODE, SECONDARY_NAMENODE, RESOURCEMANAGER, HISTORYSERVER]
+hadoop_slave: [APP_TIMELINE_SERVER, DATANODE, HDFS_CLIENT, NODEMANAGER, YARN_CLIENT, MAPREDUCE2_CLIENT]
+zookeeper_master: [ZOOKEEPER_SERVER]
+zookeeper_slave: [ZOOKEEPER_CLIENT]
+ganglia_master: [GANGLIA_SERVER]
+
+master_components: "{{ hadoop_master | union(zookeeper_master) | union(ganglia_master) }}"
+slave_components: "{{ hadoop_slave | union(zookeeper_slave) }}"
+
 blueprint:
   stack_name: HDP
   stack_version: 2.2
   groups:
     - name : master
       cardinality: 1
-      configuration: []  # configuration ot yet implemented
-      components:
-        - NAMENODE
-        - SECONDARY_NAMENODE
-        - RESOURCEMANAGER
-        - HISTORYSERVER
-        - GANGLIA_SERVER
-        - ZOOKEEPER_SERVER
+      configuration: []  # configuration not yet implemented
+      components: "{{ master_components }}"
       hosts: "{{ master_hosts}}"
     - name: slaves
       cardinality: 1+
-      configuration: []  # configuration ot yet implemented
-      components:
-        - APP_TIMELINE_SERVER
-        - DATANODE
-        - HDFS_CLIENT
-        - NODEMANAGER
-        - YARN_CLIENT
-        - MAPREDUCE2_CLIENT
-        - ZOOKEEPER_CLIENT
+      configuration: []  # configuration not yet implemented
+      components: "{{ slave_components }}"
       hosts: "{{ slave_hosts }}"
